[front] fix gap between prospection table and menus

--- a/angular/src/app/displays/desktop/dashboard/prospections/prospections-table/desktop-prospections-table.component.scss
+++ b/angular/src/app/displays/desktop/dashboard/prospections/prospections-table/desktop-prospections-table.component.scss
@@ -1,9 +1,8 @@
 :host {
   height: 100%;
-  width: 900px;
+  width: 100%;
   margin-bottom: 20px;
   display: flex;
-  margin-left: -7px;
   flex-flow: column nowrap;
   justify-content: stretch;
   align-items: stretch;
