--- a/angular/src/app/displays/desktop/dashboard/prospections/prospections.component.scss
+++ b/angular/src/app/displays/desktop/dashboard/prospections/prospections.component.scss
@@ -8,3 +8,8 @@
   gap: 8px;
   margin-bottom: 16px;
 }
+
+.table{
+  width: 900px;
+  height: 100%;
+}
